Fixed connection to DB

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,5 +1,5 @@
 jdbc.driverClassName=com.mysql.cj.jdbc.Driver
 jdbc.dialect=org.hibernate.dialect.MySQL5Dialect
-jdbc.databaseurl=jdbc:mysql://localhost:3306/HomeBD?autoReconnect=true&useSSL=true
+jdbc.databaseurl=jdbc:mysql://localhost:3306/HomeBD?autoReconnect=true&useSSL=true&serverTimezone=UTC
 jdbc.username=evg
 jdbc.password=master
